[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terminal-sudoku"
version = "0.1.0"
description = "A sudoku that you can play on the terminal, also a sudoku generator and solver."
authors = [
    {name = "Sara", email = "sara.rioseco@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.6"
dependencies = [

]

[project.urls]
"Homepage" = "https://github.com/sara-rioseco/terminal-sudoku"