[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terminal-sudoku"
version = "0.1.0"
description = "A sudoku generator and solver, playable in the terminal coming soon."
authors = [
    {name = "Sara", email = "sara.rioseco@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.6"
dependencies = [

]

[project.urls]
"Homepage" = "https://github.com/sara-rioseco/terminal_sudoku"